fix: second not preview image not visible

--- a/store/src/styles/sections/product.scss
+++ b/store/src/styles/sections/product.scss
@@ -122,9 +122,15 @@
    display: flex;
    width: 100%;
    overflow-x: auto;
-   margin-bottom: 32px;
+   gap: 8px;
+   flex-direction: column;
+   align-items: center;
    @media (max-width: 479px) {
       margin-top: 12px;
+   }
+   @media (max-width: 767px) {
+      flex-direction: row;
+      margin: 16px 0;
    }
    &::-webkit-scrollbar {
       width: 0.25rem;
